Bug 144992 [FIX] BookmarksUtils.cloneFolder does not clone subfolders (hordes of separators created in bookmarks) patch by pierrechanial@netscape.net r=blake sr=jag